fixed side bar styling issues, create route loader and scroll tracker components, fixed dark mode styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -186,6 +186,8 @@
 }
 
 body {
+  height: 100%;
+  overflow-y: auto;
   font-family: "Manrope", sans-serif;
   background-color: #ffffff;
   color: #0f172a;
